--- a/manifest.json
+++ b/manifest.json
@@ -18,10 +18,10 @@
       "default_popup": "popup.html"
     }, 
     "default_icon": {
-        "16": "images/get_started16.png",
-        "32": "images/get_started32.png",
-        "48": "images/get_started48.png",
-        "128": "images/get_started128.png"
+        "16": "images/16.png",
+        "32": "images/32.png",
+        "48": "images/48.png",
+        "128": "images/128.png"
     },
     "permissions": ["activeTab", "declarativeContent", "storage"],
   "description": "Lots of modifications to Synergy StudentVUE!",
