--- a/manifest.json
+++ b/manifest.json
@@ -15,14 +15,15 @@
       "persistent": false
     },
     "browser_action": {
-      "default_popup": "popup.html"
-    }, 
-    "default_icon": {
+      "default_popup": "popup.html",
+        "default_icon": {
         "16": "images/16.png",
         "32": "images/32.png",
         "48": "images/48.png",
         "128": "images/128.png"
+    }
     },
+
     "permissions": ["activeTab", "declarativeContent", "storage"],
   "description": "Lots of modifications to Synergy StudentVUE!",
   "manifest_version": 2
