--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
       "https://wa-bsd405-psv.edupoint.com/*"
     ],
       
-    "js": ["content.js", "studentid.js", "dark.js"]
+    "js": ["content.js", "studentid.js", "dark.js", "calender.js", "greeting.js"]
   }
 ],
     "background": {
