--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
         "16": "images/favicon (1) (1).ico",
         "24": "images/favicon (1) (1) (2).png",
         "32": "images/favicon (1).ico",
-        "48": "images/favicon (1) (1) (3).png
+        "48": "images/favicon (1) (1) (3).png",
         "64": "images/favicon (1) (1).png",
         "128": "images/favicon (1) (1) (1).png"
     }  
