--- a/manifest.json
+++ b/manifest.json
@@ -18,12 +18,10 @@
     "browser_action": {
       "default_popup": "popup.html",
         "default_icon": {
-        "16": "images/favicon (1) (1).png",
-        "24": "images/favicon (1) (1) (2).png",
-        "32": "images/favicon (1).png",
-        "48": "images/favicon (1) (1) (3).png",
-        "64": "images/favicon (1) (1).png",
-        "128": "images/favicon (1) (1) (1).png"
+        "16": "images/16.png",
+        "32": "images/32.png",
+        "48": "images/48.png",
+        "128": "images/128.png"
     }  
     },
 
