--- a/manifest.json
+++ b/manifest.json
@@ -18,10 +18,12 @@
     "browser_action": {
       "default_popup": "popup.html",
         "default_icon": {
-        "16": "images/16.png",
-        "32": "images/32.png",
-        "48": "images/48.png",
-        "128": "images/128.png"
+        "16": "images/icon16.png",
+        "24": "images/icon24.png"
+        "32": "images/icon32.png",
+        "48": "images/icon48.png",
+        "64": "images/icon64.png",
+        "128": "images/icon128.png"
     }  
     },
 
