--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,10 @@
     },
 
     "permissions": ["activeTab", "declarativeContent", "storage"],
+  "options_ui": {
+    "page": "index.html",
+    "chrome_style": false
+},
   "description": "Lots of modifications to Synergy StudentVUE!",
   "manifest_version": 2
 }
