--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
       "https://wa-bsd405-psv.edupoint.com/*"
     ],
       
-    "js": ["content.js", "studentid.js", "dark.js", "calender.js", "greeting.js", "a.js", "messages.js", "popup.js"]
+    "js": ["content.js", "studentid.js", "dark.js", "calender.js", "greeting.js", "a.js", "messages.js", "popup.js", "assessments.js"]
 
   }
 ],
