--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
         "32": "images/logo/32x32icon.png",
         "48": "images/logo/32x32icon.png",
         "64": "images/logo/64x64icon.png",
-        "128": "12.png"
+        "128": "images/logo/128x128icon.png"
     }  
     },
 
