--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,3 +7,4 @@ welcome.html @gubareve @thexpiredpear
 *.css    @gubareve @thexpiredpear
 *.md    @gubareve @thexpiredpear
 /images/* @gubareve
+SECURITY.md @gubareve
