--- a/manifest.json
+++ b/manifest.json
@@ -1,34 +1,47 @@
 {
   "name": "Synergy Addons",
   "version": "2.0.1",
-   "background": {
-    "scripts": ["background.js"],
+  "background": {
+    "scripts": [
+      "background.js"
+    ],
     "persistent": false
   },
   "content_scripts": [
-  {
-    "matches": [
-      "https://wa-bsd405-psv.edupoint.com/*"
-    ],
-      
-    "js": ["content.js", "studentid.js", "dark.js", "calender.js", "greeting.js", "a.js", "messages.js", "popup.js", "assessments.js"]
-
-  }
-],
-
-    "browser_action": {
-      "default_popup": "popup.html",
-        "default_icon": {
-        "16": "images/logo/16x16icon.png",
-        "24": "images/logo/24x24icon.png",
-        "32": "images/logo/32x32icon.png",
-        "48": "images/logo/32x32icon.png",
-        "64": "images/logo/64x64icon.png",
-        "128": "images/logo/128x128icon.png"
-    }  
-    },
-
-    "permissions": ["activeTab", "declarativeContent", "storage", "tabs"],
+    {
+      "matches": [
+        "https://wa-bsd405-psv.edupoint.com/*"
+      ],
+      "js": [
+        "content.js",
+        "studentid.js",
+        "dark.js",
+        "calender.js",
+        "greeting.js",
+        "a.js",
+        "messages.js",
+        "popup.js",
+        "assessments.js"
+      ]
+    }
+  ],
+  "browser_action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/logo/16x16icon.png",
+      "24": "images/logo/24x24icon.png",
+      "32": "images/logo/32x32icon.png",
+      "48": "images/logo/32x32icon.png",
+      "64": "images/logo/64x64icon.png",
+      "128": "images/logo/128x128icon.png"
+    }
+  },
+  "permissions": [
+    "activeTab",
+    "declarativeContent",
+    "storage",
+    "tabs"
+  ],
   "description": "Lots of modifications to Synergy StudentVUE!",
   "manifest_version": 2
 }
