--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,22 @@
-# This is a basic workflow to help you get started with Actions
+name: Prettier for JS Code
 
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [master]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  cleanup_tasks:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Prettier Action
-        uses: creyD/prettier_action@v2.2
-        with:
-          # Commit message
-          commit_message: # optional, default is Prettified Code!
-          # Commit options
-          commit_options: # optional
-          # File pattern used for `git add`
-          file_pattern: # optional, default is *
-          # Options for the `prettier` command
-          prettier_options: # optional, default is --write **/*.js
-          # Target branch for the changes
-          branch: master
-          # Running the script in dry mode just shows whether there are files that should be prettified or not
-          dry: yes # optional
-          # Specific version of prettier (by default just use the latest version)
-          prettier_version: # optional
+    - name: Cloning the repository
+      uses: actions/checkout@v1
+      with:
+        fetch-depth: 1
+    - name: Prettify the JS Code
+      uses: creyD/prettier_action@v2.1
+      with:
+        prettier_options: '--no-semi --write *.js'
+        branch: master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
