--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,7 +3,7 @@
 background.js @gubareve @thexpiredpear
 *.json    @gubareve @thexpiredpear
 *.html    @gubareve @thexpiredpear 
-welcome.html @gubareve @thexpiredpear
+welcome.html @gubareve @thexpiredpear @wickedtree
 *.css    @gubareve @thexpiredpear
 *.md    @gubareve @thexpiredpear
 /images/* @gubareve
