--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
         "dark.js",
         "calender.js",
         "greeting.js",
+        "popup.js",
         "a.js",
         "messages.js",
         "assessments.js",
