--- a/manifest.json
+++ b/manifest.json
@@ -46,6 +46,6 @@
   "manifest_version": 2,
   "applications": {
   "gecko": {
-    "id": "gubareve"
+    "id": "contact@synergyaddons.kd7t.com"
   }
 }
